fixed toolbox overlap

--- a/src/sass/toolbox.scss
+++ b/src/sass/toolbox.scss
@@ -19,7 +19,6 @@ div #toolbox {
     
         & {
         top: 2.5 * $blocksize;
-        background-color: red;
     }}
     
     @extend .gui-element;
